[package]
name = "PyRapier2d"
version = "0.1.0"
edition = "2021"

# This section tells Rust to compile a C-style dynamic library
# that Python can understand.
[lib]
name = "PyRapier2d" # The name of the .so or .pyd file
crate-type = ["cdylib"]

[dependencies]
# The core Rapier2D physics engine
rapier2d = "0.18.0" 

# The PyO3 bridge
pyo3 = { version = "0.20.0", features = ["extension-module"] }